// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubMenu /> no options 1`] = `null`;

exports[`<SubMenu /> several options, one chosen 1`] = `
Array [
  <li
    className=""
    role="presentation"
  >
    <a
      href="go/to/option2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      second option
    </a>
  </li>,
  <li
    className="dropdown-submenu"
    onMouseOut={[Function]}
    role="presentation"
  >
    <a
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      Test with several options
    </a>
    <i
      className="fa fa-chevron-down"
      onClick={[Function]}
    />
  </li>,
]
`;

exports[`<SubMenu /> two options, one chosen 1`] = `
Array [
  <li
    className=""
    role="presentation"
  >
    <a
      href="go/to/option1"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      first option
    </a>
  </li>,
  <li
    className=""
    role="presentation"
  >
    <a
      href="go/to/option2"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="menuitem"
      tabIndex="-1"
    >
      second option
    </a>
  </li>,
]
`;

exports[`<SubMenu /> with options but none chosen 1`] = `
<li
  className="dropdown-submenu"
  onMouseOut={[Function]}
  role="presentation"
>
  <a
    onClick={[Function]}
    onKeyDown={[Function]}
    role="menuitem"
    tabIndex={-1}
  >
    Test with options not chosen
  </a>
  <i
    className="fa fa-chevron-down"
    onClick={[Function]}
  />
</li>
`;
